kubernetes/apps/traefik-ingress/traefik/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: &app traefik
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/tls-acme: "true"
    # traefik.ingress.kubernetes.io/router.middlewares: traefik-ingress-sso@kubernetescrd
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/router.tls: "true"
    hajimari.io/appName: *app
    hajimari.io/enable: "true"
    hajimari.io/icon: web
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - &domain "traefik.${SETTING_CLUSTERNAME}.${SECRET_DOMAIN}"
      secretName: "traefik-tls"
  rules:
    - host: *domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: *app
                port:
                  number: 9000
